--- a/package.json
+++ b/package.json
@@ -79,8 +79,10 @@
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "superjson": "^2.2.2",
+    "swagger-ui-react": "^5.30.2",
     "tailwind-merge": "^3.3.1",
     "toposort": "^2.0.2",
+    "trpc-to-openapi": "^3.1.0",
     "vaul": "^1.1.2",
     "zod": "^4.1.11"
   },
