--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-DATABASE_URL="chamgeme"
+DATABASE_URL="changeme"
 
 BETTER_AUTH_SECRET="changeme"
 BETTER_AUTH_URL="http://localhost:3000"
 
-PRODUCTION_URL="https://pulse-three-sable.vercel.app"
+PRODUCTION_URL="https://your-app.vercel.app"
 
 GOOGLE_OAUTH_CLIENT_ID="changeme.apps.googleusercontent.com"
 GOOGLE_OAUTH_CLIENT_SECRET=
