--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ DATABASE_URL="changeme"
 BETTER_AUTH_SECRET="changeme"
 BETTER_AUTH_URL="http://localhost:3000"
 
-PRODUCTION_URL="https://your-app.vercel.app"
+NEXT_PUBLIC_APP_URL="https://your-app.com"
 
 GOOGLE_OAUTH_CLIENT_ID="changeme.apps.googleusercontent.com"
 GOOGLE_OAUTH_CLIENT_SECRET=
