--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev:all": "mprocs",
     "db:seed": "prisma db seed",
     "openapi:generate": "tsx scripts/generate-openapi.ts",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "test": "jest"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -95,14 +96,24 @@
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/supertest": "^6.0.3",
     "@types/toposort": "^2.0.7",
     "inngest-cli": "^1.12.1",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "mprocs": "^0.7.3",
     "prisma": "^6.16.3",
+    "supertest": "^7.1.4",
     "tailwindcss": "^4",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
