--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-DATABASE_URL="changeme"
+DATABASE_URL=changeme
 
-BETTER_AUTH_SECRET="changeme"
-BETTER_AUTH_URL="http://localhost:3000"
+BETTER_AUTH_SECRET=changeme
+BETTER_AUTH_URL=http://localhost:3000
 
-NEXT_PUBLIC_APP_URL="https://your-app.com"
+NEXT_PUBLIC_APP_URL=https://your-app.com
 
-GOOGLE_OAUTH_CLIENT_ID="changeme.apps.googleusercontent.com"
+GOOGLE_OAUTH_CLIENT_ID=changeme.apps.googleusercontent.com
 GOOGLE_OAUTH_CLIENT_SECRET=
 GITHUB_OAUTH_CLIENT_ID=
 GITHUB_OAUTH_CLIENT_SECRET=
