initial n8n integration POC

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ GOOGLE_OAUTH_CLIENT_ID=changeme.apps.googleusercontent.com
 GOOGLE_OAUTH_CLIENT_SECRET=
 GITHUB_OAUTH_CLIENT_ID=
 GITHUB_OAUTH_CLIENT_SECRET=
+
+N8N_KEY=
+N8N_WEBHOOK_URL=
