--- a/.github/workflows/vercel-preview-deployment.yml
+++ b/.github/workflows/vercel-preview-deployment.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/checkout@v6
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
+      - name: Pull Vercel env info
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build
         run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
       - name: Deploy preview
