--- a/.github/workflows/vercel-production-deployment.yml
+++ b/.github/workflows/vercel-production-deployment.yml
@@ -16,6 +16,8 @@ jobs:
       - uses: actions/checkout@v6
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
+      - name: Pull Vercel env info
+        run: vercel pull --yes --environment=production --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
       - name: Deploy production
