--- a/.github/workflows/vercel-preview-deployment.yml
+++ b/.github/workflows/vercel-preview-deployment.yml
@@ -3,7 +3,6 @@ name: Vercel Preview Deployment
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-  VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
 
 on:
   pull_request:
@@ -17,8 +16,8 @@ jobs:
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
       - name: Pull Vercel env info
-        run: vercel pull --yes --environment=preview
+        run: vercel pull --yes --environment=preview --token=${{ secrets.VERCEL_TOKEN }}
       - name: Build
-        run: vercel build
+        run: vercel build --token=${{ secrets.VERCEL_TOKEN }}
       - name: Deploy preview
-        run: vercel deploy --prebuilt --yes
+        run: vercel deploy --prebuilt --token=${{ secrets.VERCEL_TOKEN }} --yes
