--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "openapi:generate": "tsx scripts/generate-openapi.ts",
     "db:create-issues": "tsx scripts/create-issues.ts",
     "postinstall": "prisma generate",
-    "test": "jest"
+    "test": "vitest"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -100,24 +100,29 @@
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@types/jest": "^30.0.0",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/supertest": "^6.0.3",
     "@types/toposort": "^2.0.7",
+    "@vitejs/plugin-react": "^5.1.2",
+    "@vitest/browser-playwright": "^4.0.16",
+    "@vitest/ui": "^4.0.16",
     "inngest-cli": "^1.12.1",
-    "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "jsdom": "^27.4.0",
     "mprocs": "^0.7.3",
     "prisma": "^6.16.3",
     "supertest": "^7.1.4",
     "tailwindcss": "^4",
-    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite-tsconfig-paths": "^6.0.3",
+    "vitest": "^4.0.16",
+    "vitest-browser-react": "^2.0.2"
   }
 }
