--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "inngest:dev": "inngest-cli dev",
     "dev:all": "mprocs",
     "db:seed": "prisma db seed",
+    "db:create-test-api-key": "tsx scripts/create-test-api-key.ts",
     "openapi:generate": "tsx scripts/generate-openapi.ts",
     "db:create-issues": "tsx scripts/create-issues.ts",
     "postinstall": "prisma generate",
