--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         run: npx tsc --noEmit
 
   run-npm-tests:
-    name: Run npm tests with vitest
+    name: Run npm tests
     runs-on: ubuntu-latest
     services:
       postgres:
