--- a/.github/workflows/preview-prisma-migrations.yml
+++ b/.github/workflows/preview-prisma-migrations.yml
@@ -35,7 +35,7 @@ jobs:
           set -euo pipefail
           CONNECTION_URL=$(neonctl connection-string "$BRANCH_NAME" \
             --project-id "$NEON_PROJECT_ID" \
-            --role-name neondb \
+            --role-name neondb_owner \
             --database-name neondb)
           echo "DATABASE_URL=$CONNECTION_URL" >> $GITHUB_ENV
         
