--- a/.github/workflows/neon-branch-cleanup.yml
+++ b/.github/workflows/neon-branch-cleanup.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   delete-branch:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true
     steps:
       - name: Delete Neon Branch
         id: delete_neon_branch
