--- a/.github/workflows/enforce-pr-rules.yml
+++ b/.github/workflows/enforce-pr-rules.yml
@@ -11,5 +11,4 @@ jobs:
         uses: deepakputhraya/action-pr-title@master
         with:
           regex: '^\[VW-[0-9]+\]\s.+'
-          allowed_prefix: "[VW-"
-          prefix_case_sensitive: true
+          verbal_description: "PR title must start with [VW-##] (referencing the relevant Jira ticket) followed by a short description. Feel free to use [VW-0] for a quick cleanup that does not have an associated ticket."
