--- a/.github/workflows/enforce-pr-rules.yml
+++ b/.github/workflows/enforce-pr-rules.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check for [VW-##] prefix
-        uses: deepakputhraya/action-pr-title@master
+        uses: deepakputhraya/action-pr-title@v1.0.2
         with:
           regex: '^\[VW-[0-9]+\]\s.+'
           verbal_description: "PR title must start with [VW-##] (referencing the relevant Jira ticket) followed by a short description. Feel free to use [VW-0] for a quick cleanup that does not have an associated ticket."
