--- a/.github/workflows/preview-prisma-migrations.yml
+++ b/.github/workflows/preview-prisma-migrations.yml
@@ -74,6 +74,6 @@ jobs:
       - name: Delete Neon CI branch
         if: always()
         run: |
-          neonctl branches delete name "$BRANCH_NAME" \
+          neonctl branches delete "$BRANCH_NAME" \
            --project-id "$NEON_PROJECT_ID" \
            --yes || echo "Branch already deleted or missing"
