--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "next": "^15.5.7",
     "next-themes": "^0.4.6",
     "nuqs": "^2.7.1",
+    "radix-ui": "^1.4.3",
     "random-word-slugs": "^0.1.7",
     "react": "19.1.0",
     "react-day-picker": "^9.11.0",
