--- a/package.json
+++ b/package.json
@@ -74,9 +74,11 @@
     "jotai": "^2.15.0",
     "ky": "^1.14.0",
     "lucide-react": "^0.544.0",
+    "ms": "^2.1.3",
     "next": "^15.5.7",
     "next-themes": "^0.4.6",
     "nuqs": "^2.7.1",
+    "radix-ui": "^1.4.3",
     "random-word-slugs": "^0.1.7",
     "react": "19.1.0",
     "react-day-picker": "^9.11.0",
