Prepare for S3 use - Add hash to artifact zod schemas - Add func to generate upload URLs - Add func to normalize MDX for hex vs base64 (which S3 wants) - Update .env.example

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ GITHUB_OAUTH_CLIENT_SECRET=
 N8N_KEY=
 N8N_WEBHOOK_URL=
 N8N_AI_SYNC_URL=
+
+AWS_REGION=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
