--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ GITHUB_OAUTH_CLIENT_SECRET=
 N8N_KEY=
 N8N_WEBHOOK_URL=
 N8N_AI_SYNC_URL=
+
+AWS_ACCESS_KEY_ID=
+AWS_REGION=
+AWS_SECRET_ACCESS_KEY=
+S3_BUCKET_NAME=
